# pollux-user-interface

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: python_lint.yaml  python_test.yaml
ci/linux/: run_linter.sh  run_test.sh
pollux_interface/: app.py  create_app.py
pollux_interface/blueprint/: dbmodels.py  routes.py
pollux_interface/blueprint/app_builder/: routes.py
pollux_interface/blueprint/app_example_routes/: routes.py
pollux_interface/blueprint/app_scenarioanalysis/: routes.py
pollux_interface/blueprint/app_tagbrowser/: routes.py
pollux_interface/blueprint/app_visualisation/: routes.py
pollux_interface/blueprint/auth/: routes.py
pollux_interface/blueprint/dashboard/: routes.py
pollux_interface/blueprint/project/: routes.py
pollux_interface/blueprint/setting_plant/: routes.py
pollux_interface/static/assets/css/: black-dashboard.css  nucleo-icons.css
pollux_interface/static/page/: effect.js  project.js  report.js
pollux_interface/static/page/app_example_js/: api.js
pollux_interface/templates/: app_diagram.html  app_electrolyser.html  app_example.html  app_heatpump.html  app_scenario_analysis_component_parameters.html  app_scenario_analysis_p2h2case.html  app_scenario_analysis_p2heatcase.html  app_scenarioanalysis.html  app_tagbrowser.html  app_visualisation.html  base.html  base_login.html  documentation.html  empty.html  index.html  login.html  password.html  report.html  setting_plant.html  signup.html  timeseries.html
pollux_interface/templates/admin/: index.html
unit_test/: test_empty.py
(+13 files in other folders)
