[tool.poetry]
name = "pollux-user-interface"
version = "0.1.0"
description = "Core GUI library of the POLLUX Digital Twin"
authors = ["Demetris Palochis <demetris.palochis@tno.nl>"]
readme = "README.md"
packages = [{ include = "pollux_interface" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
homepage = "https://tno.nl"
documentation = "https://readthedocs.org"
repository = "https://github.com/Pollux-digital-twin/pollux-user-interface"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
flake8 = "^7.0.0"
Flask = "^2.2.5"
Flask-SQLAlchemy = "^3.0.4"
Flask-Login = "^0.6.2"
Flask-SocketIO = "^5.3.4"
flask_session = "^0.5.0"
werkzeug = "^2.3.5"
mysqlclient = "^2.2.0"
influxdb-client = "^1.36.1"
pytz = "^2024.1"
flask-admin = "1.6.1"
Flask-Migrate = "^4.0.7"
pollux-application = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

